# qqcoin-GPU-Miner-Source

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  driver-opencl.c  scrypt.c  ybcminer.c
